--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
             "org.assertj:assertj-core:3.22.0",
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "com.codeborne:selenide:6.4.0",
+            "org.aeonbits.owner:owner:1.0.12",
             "org.slf4j:slf4j-simple:1.7.36")
 
 
@@ -61,5 +62,9 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+    test {
+        useJUnitPlatform()
+        systemProperties(System.getProperties())
     }
 }
